Removed button styling from css file and moved to inline as it was not aligning correctly

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -81,11 +81,4 @@
     color: yellow;
 }
 
-.search-button {
-    margin-left: 10px;
-  }
-  
-  .search-button > i {
-    font-size: 25px;
-  }
 
